fix a11y color contrast issues

--- a/_includes/css/box.css
+++ b/_includes/css/box.css
@@ -59,7 +59,7 @@
 }
 
 .box.appcexplorer {
-  background-color: rgba(171, 220, 214, var(--box-opacity));
+  background-color: rgba(30, 126, 100, var(--box-opacity));
 }
 .no-js .box.appcexplorer {
   background-image: url('https://joaobordalo.com/images/static/portfolio/appcexplorer.png');
@@ -73,7 +73,7 @@
 }
 
 .box.dogoffleash {
-  background-color: rgba(142, 214, 215, var(--box-opacity));
+  background-color: rgba(80, 97, 97, var(--box-opacity));
 }
 .no-js .box.dogoffleash {
   background-image: url('https://joaobordalo.com/images/static/portfolio/dogoffleash.png');
@@ -87,7 +87,7 @@
 }
 
 .box.bitcoinstats {
-  background-color: rgba(140, 140, 140, var(--box-opacity));
+  background-color: rgba(112, 112, 112, var(--box-opacity));
 }
 .no-js .box.bitcoinstats {
   background-image: url('https://joaobordalo.com/images/static/portfolio/bitcoinstats.png');
@@ -101,7 +101,7 @@
 }
 
 .box.nostr-utils {
-  background-color: rgba(192, 192, 192, var(--box-opacity));
+  background-color: rgba(85, 85, 85, var(--box-opacity));
 }
 .no-js .box.nostr-utils {
   background-image: url('https://joaobordalo.com/images/static/portfolio/nostr-utils.png');
@@ -115,14 +115,14 @@
 }
 
 .box.fuji {
-  background-color: rgba(187, 153, 210, var(--box-opacity));
+  background-color: rgba(110, 61, 143, var(--box-opacity));
 }
 .no-js .box.fuji {
   background-image: url('https://joaobordalo.com/images/static/portfolio/fuji.png');
 }
 
 .box.tdex {
-  background-color: rgba(204, 138, 135, var(--box-opacity));
+  background-color: rgba(144, 100, 100, var(--box-opacity));
 }
 .no-js .box.tdex {
   background-image: url('https://joaobordalo.com/images/static/portfolio/tdex.png');
